--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,6 @@
 
     <!--    }"></board-button>-->
 
-    <board [board]="board"></board>
+    <board [collapsed]="true" [board]="board"></board>
 
 </div>
