--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,4 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-@import '~@angular/material/theming';
 
 body {
 
@@ -22,5 +21,11 @@ body, html {
 * {
 
     outline: none;
+
+}
+
+.toolbar-menu + * .mat-menu-panel {
+
+    background: #222;
 
 }
