--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,7 +40,7 @@
 
         <div class="right">
 
-            <!--            <card [config]="card"></card>-->
+            <toggle [config]="toggle"></toggle>
 
         </div>
 
