--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,9 +38,11 @@
 
         </div>
 
-        <div class="right">
+        <div class="right" fxLayout="column" fxFlexAlign="center" fxLayoutAlign="center">
 
             <toggle [config]="toggle"></toggle>
+
+            <!--            <features-table [config]="features"></features-table>-->
 
             <plans [config]="plans"></plans>
 
