--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,6 +46,8 @@
 
             <plans [config]="plans"></plans>
 
+            <buttons [config]="buttons"> asdfasd fas asd fsfs</buttons>
+
         </div>
 
     </div>
