--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,55 +1,57 @@
-<div class="wrapper mat-elevation-z6">
+<!--<div class="wrapper mat-elevation-z6">-->
 
-    <div class="top">
+<!--    <div class="top">-->
 
-        <toolbar [config]="toolbar">
+<!--        <toolbar [config]="toolbar">-->
 
-            <div class="left" left>
+<!--            <div class="left" left>-->
 
-                <div class="icon">
+<!--                <div class="icon">-->
 
-                    <img src="https://storage.googleapis.com/streamnvr-assets/gfx/logos/icon.png">
+<!--                    <img src="https://storage.googleapis.com/streamnvr-assets/gfx/logos/icon.png">-->
 
-                </div>
+<!--                </div>-->
 
-                <div class="logo">
+<!--                <div class="logo">-->
 
-                    <img src="https://storage.googleapis.com/streamnvr-assets/gfx/logos/logo-text.png">
+<!--                    <img src="https://storage.googleapis.com/streamnvr-assets/gfx/logos/logo-text.png">-->
 
-                </div>
+<!--                </div>-->
 
-            </div>
+<!--            </div>-->
 
-            <div class="logo" center>
+<!--            <div class="logo" center>-->
 
-                center
+<!--                center-->
 
-            </div>
+<!--            </div>-->
 
-        </toolbar>
+<!--        </toolbar>-->
 
-    </div>
+<!--    </div>-->
 
-    <div class="content" fxLayout="row">
+<!--    <div class="content" fxLayout="row">-->
 
-        <div class="left">
+<!--        <div class="left">-->
 
-            <board [collapsed]="true" [board]="board"></board>
+<!--            <board [collapsed]="true" [board]="board"></board>-->
 
-        </div>
+<!--        </div>-->
 
-        <div class="right" fxLayout="column" fxFlexAlign="center" fxLayoutAlign="center">
+<!--        <div class="right" fxLayout="column" fxFlexAlign="center" fxLayoutAlign="center">-->
 
-            <toggle [config]="toggle"></toggle>
+<!--            <toggle [config]="toggle"></toggle>-->
 
-            <!--            <features-table [config]="features"></features-table>-->
+<!--            &lt;!&ndash;            <features-table [config]="features"></features-table>&ndash;&gt;-->
 
-            <plans [config]="plans"></plans>
+<!--            <plans [config]="plans"></plans>-->
 
-            <buttons [config]="buttons"> asdfasd fas asd fsfs</buttons>
+<!--            <buttons [config]="buttons"> asdfasd fas asd fsfs</buttons>-->
 
-        </div>
+<!--        </div>-->
 
-    </div>
+<!--    </div>-->
 
-</div>
+<!--</div>-->
+
+<app-manager></app-manager>
