--- a/projects/clr-form/src/lib/angularstudio-clr-form-input/angularstudio-clr-form-input.component.html
+++ b/projects/clr-form/src/lib/angularstudio-clr-form-input/angularstudio-clr-form-input.component.html
@@ -12,6 +12,7 @@
         <clr-input-container>
 
             <input clrInput
+                   (keydown.enter)="onSaveClick()"
                    [placeholder]="field.placeholder || ''"
                    [formControl]="control">
 
