--- a/projects/clr-form/src/lib/angularstudio-clr-form-input/angularstudio-clr-form-input.component.html
+++ b/projects/clr-form/src/lib/angularstudio-clr-form-input/angularstudio-clr-form-input.component.html
@@ -6,13 +6,14 @@
 
     </div>
 
-    <div *ngIf="editing"
+    <div *ngIf="formService.config[name].editing || editing"
          class="angularstudio-clr-form-control angular-clr-form-input-control">
 
         <clr-input-container>
 
             <input clrInput
                    (keydown.enter)="onSaveClick()"
+                   (blur)="onSaveClick()"
                    [placeholder]="field.placeholder || ''"
                    [formControl]="control">
 
@@ -23,7 +24,7 @@
 
     </div>
 
-    <div *ngIf="!editing"
+    <div *ngIf="!formService.config[name].editing && !editing"
          (click)="editing = !editing"
          [style.text-decoration]="styleTextDecoration"
          [style.text-decoration-style]="styleTextDecorationStyle"
@@ -33,7 +34,8 @@
 
     </div>
 
-    <div *ngIf="editing && control.valid" class="angularstudio-clr-form-icons">
+    <div *ngIf="(formService.config[name].editing || editing) && formService.config[name].saveShow && control.valid"
+         class="angularstudio-clr-form-icons">
 
         <i (click)="onSaveClick()" class="fad fa-save"></i>
 
