--- a/projects/clr-form/src/lib/angularstudio-clr-form-select/angularstudio-clr-form-select.component.html
+++ b/projects/clr-form/src/lib/angularstudio-clr-form-select/angularstudio-clr-form-select.component.html
@@ -6,7 +6,7 @@
 
     </div>
 
-    <div *ngIf="editing"
+    <div *ngIf="formService.config[name].editing || editing"
          class="angularstudio-clr-form-control angular-clr-form-input-control">
 
         <clr-select-container>
@@ -29,7 +29,7 @@
 
     </div>
 
-    <div *ngIf="!editing"
+    <div *ngIf="!formService.config[name].editing && !editing"
          (click)="editing = !editing"
          [style.text-decoration]="styleTextDecoration"
          [style.text-decoration-style]="styleTextDecorationStyle"
@@ -39,7 +39,8 @@
 
     </div>
 
-    <div *ngIf="editing && control.valid" class="angularstudio-clr-form-icons">
+    <div *ngIf="(formService.config[name].editing || editing) && formService.config[name].saveShow && control.valid"
+         class="angularstudio-clr-form-icons">
 
         <i (click)="onSaveClick()" class="fad fa-save"></i>
 
