--- a/projects/angularstudio-clr-login/src/lib/angularstudio-clr-login.component.html
+++ b/projects/angularstudio-clr-login/src/lib/angularstudio-clr-login.component.html
@@ -38,7 +38,7 @@
 
             <clr-input-container>
 
-                <label class="clr-sr-only">Username</label>
+                <label class="clr-sr-only">Email Address</label>
                 <input type="text" formControlName="email" clrInput placeholder="Email Address" autofocus>
 
             </clr-input-container>
@@ -46,7 +46,11 @@
             <clr-password-container>
 
                 <label class="clr-sr-only">Password</label>
-                <input type="password" formControlName="password" clrPassword placeholder="Password">
+                <input type="password"
+                       formControlName="password"
+                       placeholder="Password"
+                       (keyup.enter)="onSubmit()"
+                       clrPassword>
 
             </clr-password-container>
 
@@ -64,7 +68,7 @@
             <!--            </div>-->
 
 
-            <button class="btn btn-secondary">LOGIN</button>
+            <button (click)="onSubmit()" class="btn btn-secondary">LOGIN</button>
 
         </div>
 
