--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 
         <a href="#" class="nav-link">
 
-            <img src="/assets/gfx/logo-satin.jpg">
+            <img src="/assets/gfx/ng.studio-logo-transparent.png">
 
         </a>
 
