--- a/projects/clr-form/src/lib/angularstudio-clr-form.component.html
+++ b/projects/clr-form/src/lib/angularstudio-clr-form.component.html
@@ -23,6 +23,11 @@
                                          [field]="field"
                                          [control]="formGroup.get(field.name)"></angularstudio-clr-form-checkbox>
 
+        <angularstudio-clr-form-range *ngIf="field.type === 'range'"
+                                      [name]="name"
+                                      [field]="field"
+                                      [control]="formGroup.get(field.name)"></angularstudio-clr-form-range>
+
     </div>
 
 </div>
