--- a/projects/clr-form/src/lib/angularstudio-clr-form-range/angularstudio-clr-form-range.component.html
+++ b/projects/clr-form/src/lib/angularstudio-clr-form-range/angularstudio-clr-form-range.component.html
@@ -20,23 +20,22 @@
     <div *ngIf="formService.config[name].editing || editing"
          class="angularstudio-clr-form-control angular-clr-form-input-control">
 
-        <clr-select-container>
+        <!--        <clr-range-container [clrRangeHasProgress]="true">-->
 
-            <select clrSelect name="options" [formControl]="control">
+        <!--            <input clrRange-->
+        <!--                   type="range"-->
+        <!--                   (keydown.enter)="onSaveClick()"-->
+        <!--                   (blur)="onSaveClick()"-->
+        <!--                   [placeholder]="field.placeholder || ''"-->
+        <!--                   [formControl]="control"-->
+        <!--                   [min]="field.min"-->
+        <!--                   [max]="field.max">-->
 
-                <option *ngFor="let option of field.data"
-                        [value]="option.value">
+        <!--            <clr-control-helper>{{ field.helper}}</clr-control-helper>-->
+        <!--            <clr-control-error>This field is required!</clr-control-error>-->
 
-                    {{ option.label }}
-
-                </option>
-
-            </select>
-
-            <clr-control-helper>{{ field.helper }}</clr-control-helper>
-            <clr-control-error>This field is required!</clr-control-error>
-
-        </clr-select-container>
+        <!--        </clr-range-container>-->
+        <ngx-slider [(value)]="value" (valueChange)="onValueChange($event)" [options]="options"></ngx-slider>
 
     </div>
 
@@ -46,7 +45,7 @@
          [style.text-decoration-style]="styleTextDecorationStyle"
          class="angularstudio-clr-form-plaintext">
 
-        {{ label }}
+        {{ control.value }}
 
     </div>
 
