--- a/projects/clr-form/src/lib/angularstudio-clr-form-range/angularstudio-clr-form-range.component.html
+++ b/projects/clr-form/src/lib/angularstudio-clr-form-range/angularstudio-clr-form-range.component.html
@@ -35,7 +35,7 @@
         <!--            <clr-control-error>This field is required!</clr-control-error>-->
 
         <!--        </clr-range-container>-->
-        <ngx-slider [(value)]="value" (valueChange)="onValueChange($event)" [options]="options"></ngx-slider>
+<!--        <ngx-slider [(value)]="value" (valueChange)="onValueChange($event)" [options]="options"></ngx-slider>-->
 
     </div>
 
