--- a/projects/angularstudio-clr-login/src/lib/angularstudio-clr-login.component.html
+++ b/projects/angularstudio-clr-login/src/lib/angularstudio-clr-login.component.html
@@ -68,7 +68,10 @@
             <!--            </div>-->
 
 
-            <button (click)="onSubmit()" class="btn btn-secondary">LOGIN</button>
+            <button (click)="onSubmit()"
+                    [disabled]="!formGroup.valid"
+                    class="btn btn-secondary">LOGIN
+            </button>
 
         </div>
 
