--- a/projects/angularstudio-clr-login/src/lib/angularstudio-clr-login.component.html
+++ b/projects/angularstudio-clr-login/src/lib/angularstudio-clr-login.component.html
@@ -69,7 +69,7 @@
 
 
             <button (click)="onSubmit()"
-                    [disabled]="!formGroup.valid"
+                    [disabled]="formGroup.pristine || !formGroup.valid"
                     class="btn btn-secondary">LOGIN
             </button>
 
