--- a/projects/clr-form/src/lib/angularstudio-clr-form-input/angularstudio-clr-form-input.component.html
+++ b/projects/clr-form/src/lib/angularstudio-clr-form-input/angularstudio-clr-form-input.component.html
@@ -41,7 +41,7 @@
          [style.text-decoration-style]="styleTextDecorationStyle"
          class="angularstudio-clr-form-plaintext">
 
-        {{ control.value }}
+        {{ control.value || 'none' }}
 
     </div>
 
