--- a/projects/angularstudio-modal/src/lib/angularstudio-modal.component.scss
+++ b/projects/angularstudio-modal/src/lib/angularstudio-modal.component.scss
@@ -9,3 +9,11 @@ angularstudio-modal .modal-header .modal-title, angularstudio-modal .modal-heade
     padding: 0 !important;
 
 }
+
+angularstudio-modal .modal-title .description {
+
+    margin-top: 5px;
+    margin-bottom: 10px;
+    font-size: 13px;
+    line-height: 18px;
+}
