--- a/projects/angularstudio-modal/src/lib/angularstudio-modal.component.scss
+++ b/projects/angularstudio-modal/src/lib/angularstudio-modal.component.scss
@@ -14,7 +14,7 @@ angularstudio-modal .modal-body {
 
 angularstudio-modal .modal-body .alert {
 
-    margin-bottom: 10px;
+    //margin-bottom: 10px;
 
 }
 
