--- a/projects/angularstudio-change-password/src/lib/angularstudio-change-password.component.html
+++ b/projects/angularstudio-change-password/src/lib/angularstudio-change-password.component.html
@@ -6,11 +6,17 @@
 
     <h3 class="modal-title">
 
-        Change Password
+        {{ changePasswordService.config.title }}
 
     </h3>
 
     <div class="modal-body">
+
+        <div *ngIf="changePasswordService.config.message" class="message">
+
+            {{ changePasswordService.config.message }}
+
+        </div>
 
         <form [formGroup]="changePasswordService.formGroup"
               clrLabelSize="4"
