--- a/projects/angularstudio-change-password/src/lib/angularstudio-change-password.component.scss
+++ b/projects/angularstudio-change-password/src/lib/angularstudio-change-password.component.scss
@@ -1,3 +1,9 @@
+angularstudio-change-password .modal-header--accessible {
+
+    padding: 0;
+
+}
+
 angularstudio-change-password .clr-focus {
 
     width: auto !important;
